--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
 }
 
 #question {
-    font-family: 'Dancing Script', cursive; /* Changed font */
-    font-size: 52px;
+    font-family: 'Sacramento', cursive; /* Apply Sacramento font to the question */
+    font-size: 52px; /* Set font size for the question */
 }
 
 #options {
